--- a/impact/planet.html
+++ b/impact/planet.html
@@ -9,8 +9,7 @@
     type="text/css" />
 </head>
 <body>
-    <header id="navigation-top"
-        class="navbar navbar-inverse navbar-fixed-top">
+    <header id="navigation-top" class="navbar navbar-inverse">
         <nav class="navbar-inner">
             <div class="container">
                 <a class="brand" href="index.html">Space on Earth</a>
@@ -19,38 +18,59 @@
     </header>
 
     <article
-        data-image-url="./img-big/dnb_land_ocean_ice.2012.13500x13500.D2.jpg"
+        data-image-url="./img-big/dnb_land_ocean_ice.2012.13500x13500.D2.jpg-umx/tiles/{z}/{x}_{y}.jpg"
         data-image-width="13500" data-image-height="13500"
         data-image-zoom="14">
 
-        <section data-pos="0.112060546875;0.364501953125"
+        <section data-top-left="0.112060546875;0.364501953125"
             data-marker-icon="icon-comment" data-zoom-max="18">
             <div class="row-fluid">
                 <div class="span12 umx-info-main ">
                     <h1>Duis ligula nibh</h1>
-                    <div class="umx-info-details">Lorem ipsum
-                        dolor sit amet, consectetur adipiscing elit.
-                        Duis ligula nibh, iaculis ac scelerisque id,
-                        ultrices a sapien. Mauris ultrices scelerisque
-                        leo et porttitor. Donec rhoncus bibendum nisi
-                        eget dignissim. In tincidunt lacinia est nec
-                        dapibus. Praesent pretium, diam a gravida
-                        pretium, risus mauris scelerisque odio, ut
-                        pellentesque dui sapien at nibh. Praesent sit
-                        amet bibendum nisi. Donec ornare, velit sit amet
-                        iaculis eleifend, velit turpis placerat sapien,
-                        ut egestas arcu nunc dictum elit. Praesent ac
-                        nulla nec sapien dapibus accumsan a id odio.
-                        Aenean vestibulum imperdiet enim, sit amet
-                        tempor neque gravida blandit. Maecenas interdum
-                        purus at urna mollis posuere. Suspendisse
-                        placerat pharetra ante quis rhoncus.</div>
+                    <div class="umx-info-details">
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Duis ligula nibh, iaculis
+                            ac scelerisque id, ultrices a sapien. Mauris
+                            ultrices scelerisque leo et porttitor. Donec
+                            rhoncus bibendum nisi eget dignissim. In
+                            tincidunt lacinia est nec dapibus.</p>
+                        <p>Praesent pretium, diam a gravida pretium,
+                            risus mauris scelerisque odio, ut
+                            pellentesque dui sapien at nibh. Praesent
+                            sit amet bibendum nisi. Donec ornare, velit
+                            sit amet iaculis eleifend, velit turpis
+                            placerat sapien, ut egestas arcu nunc dictum
+                            elit. Praesent ac nulla nec sapien dapibus
+                            accumsan a id odio. Aenean vestibulum
+                            imperdiet enim, sit amet tempor neque
+                            gravida blandit. Maecenas interdum purus at
+                            urna mollis posuere. Suspendisse placerat
+                            pharetra ante quis rhoncus.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Duis ligula nibh, iaculis
+                            ac scelerisque id, ultrices a sapien. Mauris
+                            ultrices scelerisque leo et porttitor. Donec
+                            rhoncus bibendum nisi eget dignissim. In
+                            tincidunt lacinia est nec dapibus.</p>
+                        <p>Praesent pretium, diam a gravida pretium,
+                            risus mauris scelerisque odio, ut
+                            pellentesque dui sapien at nibh. Praesent
+                            sit amet bibendum nisi. Donec ornare, velit
+                            sit amet iaculis eleifend, velit turpis
+                            placerat sapien, ut egestas arcu nunc dictum
+                            elit. Praesent ac nulla nec sapien dapibus
+                            accumsan a id odio. Aenean vestibulum
+                            imperdiet enim, sit amet tempor neque
+                            gravida blandit. Maecenas interdum purus at
+                            urna mollis posuere. Suspendisse placerat
+                            pharetra ante quis rhoncus.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
 
-        <section data-pos="0.131103515625;0.6085205078125"
+        <section data-top-left="0.131103515625;0.6085205078125"
             data-marker-icon="icon-comment" data-zoom="11">
             <div class="row-fluid">
                 <div class="span12 umx-info-main">
@@ -81,7 +101,7 @@
             </div>
         </section>
 
-        <section data-pos="0.241455078125;0.17041015625"
+        <section data-top-left="0.241455078125;0.17041015625"
             data-marker-icon="icon-comment" data-zoom="11">
             <div class="row-fluid">
                 <div class="span12 umx-info-main">
