--- a/index.html
+++ b/index.html
@@ -52,6 +52,59 @@
 
     <section id="main-canvas"></section>
 
+    <article
+        data-image-url="./img-big/dnb_land_ocean_ice.2012.13500x13500.D2.jpg-umx/tiles/{z}/{x}_{y}.jpg"
+        data-image-width="13500" data-image-height="13500"
+        data-image-zoom="14" style="display: none;">
+        <section data-top-left="0.112060546875;0.364501953125"
+            data-marker-icon="icon-comment" data-zoom-max="18">
+            <div class="row-fluid">
+                <div class="span12 umx-info-main ">
+                    <h1>Duis ligula nibh</h1>
+                    <div class="umx-info-details">
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Duis ligula nibh, iaculis
+                            ac scelerisque id, ultrices a sapien. Mauris
+                            ultrices scelerisque leo et porttitor. Donec
+                            rhoncus bibendum nisi eget dignissim. In
+                            tincidunt lacinia est nec dapibus.</p>
+                        <p>Praesent pretium, diam a gravida pretium,
+                            risus mauris scelerisque odio, ut
+                            pellentesque dui sapien at nibh. Praesent
+                            sit amet bibendum nisi. Donec ornare, velit
+                            sit amet iaculis eleifend, velit turpis
+                            placerat sapien, ut egestas arcu nunc dictum
+                            elit. Praesent ac nulla nec sapien dapibus
+                            accumsan a id odio. Aenean vestibulum
+                            imperdiet enim, sit amet tempor neque
+                            gravida blandit. Maecenas interdum purus at
+                            urna mollis posuere. Suspendisse placerat
+                            pharetra ante quis rhoncus.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Duis ligula nibh, iaculis
+                            ac scelerisque id, ultrices a sapien. Mauris
+                            ultrices scelerisque leo et porttitor. Donec
+                            rhoncus bibendum nisi eget dignissim. In
+                            tincidunt lacinia est nec dapibus.</p>
+                        <p>Praesent pretium, diam a gravida pretium,
+                            risus mauris scelerisque odio, ut
+                            pellentesque dui sapien at nibh. Praesent
+                            sit amet bibendum nisi. Donec ornare, velit
+                            sit amet iaculis eleifend, velit turpis
+                            placerat sapien, ut egestas arcu nunc dictum
+                            elit. Praesent ac nulla nec sapien dapibus
+                            accumsan a id odio. Aenean vestibulum
+                            imperdiet enim, sit amet tempor neque
+                            gravida blandit. Maecenas interdum purus at
+                            urna mollis posuere. Suspendisse placerat
+                            pharetra ante quis rhoncus.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </article>
+
+
     <footer id="navigation-bottom">
         <nav class="navbar navbar-inverse">
             <div class="navbar-inner">
@@ -93,6 +146,5 @@
     <script src="lib/fractalview/fractalview-debug.js"
         type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
-
 </body>
 </html>
