Update the background image reference.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <section id="main-canvas"></section>
 
     <article
-        data-image-url="./img-big/dnb_land_ocean_ice.2012.13500x13500.D2.jpg-umx/tiles/{z}/{x}_{y}.jpg"
-        data-image-width="13500" data-image-height="13500"
+        data-image-url="./img-big/earth-night-nasa.jpg-umx/tiles/{z}/{x}_{y}.jpg"
+        data-image-width="12150" data-image-height="6075"
         data-image-zoom="14" style="display: none;">
         <section data-top-left="0.112060546875;0.364501953125"
             data-marker-icon="icon-comment" data-zoom-max="18">
