--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         data-image-url="./img-big/earth-night-nasa.jpg-umx/tiles/{z}/{x}_{y}.jpg"
         data-image-width="12150" data-image-height="6075"
         data-image-zoom="14" style="display: none;">
+
         <section data-top-left="0.112060546875;0.364501953125"
-            data-marker-icon="icon-comment" data-zoom-max="18">
+            data-title="A short title" data-marker-icon="icon-comment"
+            data-zoom="12">
             <div class="row-fluid">
                 <div class="span12 umx-info-main ">
                     <h1>Duis ligula nibh</h1>
