--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
     </header>
-    
+
 
     <section id="main-canvas"></section>
 
@@ -58,7 +58,24 @@
         data-image-width="12150" data-image-height="6075"
         data-image-zoom="14" style="display: none;">
 
-        <section data-top-left="0.112060546875;0.364501953125"
+        <nav class="area-annotations">
+            <ul>
+                <li><a href="#medicine"
+                    data-top-left="0.0833740234375;0.371826171875"
+                    data-bottom-right="0.0892333984375;0.380126953125"
+                    data-zone-color="yellow">Medical domain</a></li>
+                <li><a href="#tech"
+                    data-top-left="0.057861328125;0.423828125"
+                    data-bottom-right="0.079345703125;0.461181640625"
+                    data-zone-color="white">Technology</a></li>
+                <li><a href="#communication"
+                    data-top-left="0.0765380859375;0.2841796875"
+                    data-bottom-right="0.09619140625;0.3157958984375"
+                    data-zone-color="red">Communication</a></li>
+            </ul>
+        </nav>
+
+        <section data-top-left="0.084747314453125;0.37542724609375"
             data-title="A short title" data-marker-icon="icon-comment"
             data-zoom="12">
             <div class="row-fluid">
@@ -147,6 +164,8 @@
     <script src="lib/leaflet/dist/leaflet-src.js"></script>
     <script src="lib/fractalview/fractalview.js" type="text/javascript"></script>
     <script src="lib/fractalview/fractalview-debug.js"
+        type="text/javascript"></script>
+    <script src="lib/fractalview/fractalview-panoramas.js"
         type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
