Bootstrap-based popups were implemented.

--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
             data-marker-icon="icon-info-sign" data-zoom="12"
             name="introduction">
             <h1>Individual / Health - Medicine</h1>
-            <div>As NASA continues its mission to carry human
-                presence deeper into space and expand our knowledge of
-                the universe, the Agency’s efforts also reach into
-                another territory—the inner space of the human body.
-                NASA partnerships are exploring the use of carbon
-                nanotubes to diagnose and treat brain tumors, perfecting
-                fiber optic probes for detecting cataracts that cloud
-                vision, and developing software for recognizing and
-                managing depression. From experiments on the
-                International Space Station to aeronautics research,
+            <div class="toto">As NASA continues its mission to
+                carry human presence deeper into space and expand our
+                knowledge of the universe, the Agency’s efforts also
+                reach into another territory—the inner space of the
+                human body. NASA partnerships are exploring the use of
+                carbon nanotubes to diagnose and treat brain tumors,
+                perfecting fiber optic probes for detecting cataracts
+                that cloud vision, and developing software for
+                recognizing and managing depression. From experiments on
+                the International Space Station to aeronautics research,
                 NASA programs are also resulting in spinoffs that
                 improve fitness, treat disease, and save lives. These
                 resulting medical technologies are among the more than
@@ -1362,24 +1362,6 @@
         </section>
 
     </article>
-
-
-    <footer id="navigation-bottom">
-        <nav class="navbar navbar-inverse">
-            <div class="navbar-inner">
-                <div class="container">
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li><a href="impact/planet.html">Planet</a></li>
-                            <li><a href="impact/country.html">Country</a></li>
-                            <li><a href="impact/city.html">City</a></li>
-                            <li><a href="impact/individual.html">Humans</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </footer>
 
     <nav id="about-box" class="modal hide fade">
         <div class="modal-header">
