--- a/content.html
+++ b/content.html
@@ -18,7 +18,7 @@
 
 
     <article
-        data-image-url="./img-big/space-on-earth.jpg-umx/tiles/{z}/{x}_{y}.jpg"
+        data-image-url="http://spaceonearth.ubimix.com/img-big/space-on-earth.jpg-umx/tiles/{z}/{x}_{y}.jpg"
         data-image-width="12150" data-image-height="6075"
         data-image-zoom="14" style="display: none;">
 
@@ -26,39 +26,36 @@
         <nav class="area-annotations">
             <ul>
                 <li>
-                <!--
                 <a href="#medicine"
                     data-top-left="0.0205078125;0.029052734375"
                     data-bottom-right="0.17529296875;0.20166015625"
-                    data-zone-color="yellow">Medical domain</a>
+                    data-zone-color="">Medical domain</a>
                 </li>
                 
                 <li><a href="#consumer"
                     data-top-left="0.04052734375;0.241943359375"
                     data-bottom-right="0.185302734375;0.3916015625"
-                    data-zone-color="blue">Environment</a></li>
+                    data-zone-color="">Environment</a></li>
                 <li><a href="#transport"
                     data-top-left="0.02099609375;0.41748046875"
                     data-bottom-right="0.1796875;0.576171875"
-                    data-zone-color="red">Transport</a></li>
+                    data-zone-color="">Transport</a></li>
                 <li><a href="#safety"
                     data-top-left="0.03515625;0.603515625"
                     data-bottom-right="0.189453125;0.76806640625"
-                    data-zone-color="orange">Public safety</a></li>
+                    data-zone-color="">Public safety</a></li>
                 <li><a href="#consumer"
                     data-top-left="0.19873046875;0.10107421875"
                     data-bottom-right="0.349609375;0.2666015625"
-                    data-zone-color="pink">Consumer goods</a></li>
+                    data-zone-color="">Consumer goods</a></li>
                 <li><a href="#information-technology"
                     data-top-left="0.20654296875;0.3154296875"
                     data-bottom-right="0.3505859375;0.47021484375"
-                    data-zone-color="green">Information Technology</a></li>
+                    data-zone-color="">Information Technology</a></li>
                 <li><a href="#industrial-productivity"
                     data-top-left="0.205078125;0.52001953125"
                     data-bottom-right="0.35302734375;0.6767578125"
-                    data-zone-color="gray">Industrial Productivity</a></li>
-                    
-               -->
+                    data-zone-color="">Industrial Productivity</a></li>
             </ul>
         </nav>
 
