About page was updated

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
             <h3>Space on Earth</h3>
         </div>
         <div class="modal-body">
-            <p>NASA hackathon</p>
+            <h4>Participants</h4>
+            <ul>
+                <li><strong>Djoann Fal</strong> &#150; concept,
+                    development, data preparation</li>
+                <li><strong>Stéphane Laurière</strong> &#150;
+                    concept, development, data preparation</li>
+                <li><strong>Fiodor Tonti</strong> &#150; design,
+                    visual concept</li>
+                <li><strong>Marion Boucharlat</strong> &#150; design</li>
+                <li><strong>Mikhail Kotelnikov</strong> &#150;
+                    concept, technical development</li>
+            </ul>
         </div>
         <div class="modal-footer">
             <a href="#" data-dismiss="modal" class="btn">Close</a>
